sna: Propagate failure from changing backlight value

Especially when we delete the output property halfway through and the
ChangeProperty routine then attempts to wire it back up...

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=82833
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>